--- a/Kirsche/schedule.html
+++ b/Kirsche/schedule.html
@@ -9,6 +9,9 @@
         body {
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .menu-button {
             cursor: pointer;
@@ -20,6 +23,7 @@
             position: fixed;
             top: 10px;
             left: 10px;
+            z-index: 10;
         }
         .menu-button img {
             width: 100%;
@@ -36,6 +40,7 @@
             padding: 1rem;
             transform: translateX(-100%);
             transition: transform 0.3s ease;
+            z-index: 9;
         }
         .sidebar.active {
             transform: translateX(0);
@@ -57,13 +62,20 @@
             left: 10px;
         }
         .schedule-container {
-            padding: 1rem;
+            position: relative;
+            text-align: center;
+            color: white;
+            margin-top: 20px;
+        }
+        .schedule-container img {
+            width: 100%;
+            max-width: 800px;
         }
         .schedule-day {
-            background-color: white;
-            border: 1px solid black;
+            background-color: rgba(0, 0, 0, 0.7);
             padding: 1rem;
-            margin-bottom: 1rem;
+            margin: 0.5rem;
+            border-radius: 8px;
         }
         .schedule-day h3 {
             margin: 0 0 0.5rem 0;
@@ -93,7 +105,7 @@
             const response = await fetch('config.json');
             const config = await response.json();
             const twitchChannel = config.twitch_channel;
-            const twitchClientId = config.twitch_clientID; // Read Twitch Client ID from config
+            const twitchClientId = config.twitch_clientID;
 
             const scheduleResponse = await fetch(`https://api.twitch.tv/helix/schedule?broadcaster_id=${twitchChannel}`, {
                 headers: {
@@ -101,7 +113,7 @@
                 }
             });
             const scheduleData = await scheduleResponse.json();
-            displaySchedule(scheduleData.data.segments); // Access segments array from response
+            displaySchedule(scheduleData.data.segments);
         }
 
         function displaySchedule(schedule) {
@@ -111,7 +123,7 @@
                 const day = new Date(segment.start_time).toLocaleDateString('en-US', { weekday: 'long' });
                 const time = new Date(segment.start_time).toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit' });
                 const title = segment.title;
-                const description = segment.category_name;
+                const description = segment.category.name;
                 const scheduleDay = document.createElement('div');
                 scheduleDay.className = 'schedule-day';
                 scheduleDay.innerHTML = `<h3>${day}</h3><p><strong>${title}</strong></p><p>${time}</p><p>${description}</p>`;
@@ -137,6 +149,7 @@
     </div>
     <main class="container">
         <div class="schedule-container" id="schedule-container">
+            <img src="schedule.png" alt="Schedule Background">
             <!-- Schedule will be dynamically populated here -->
         </div>
     </main>
