--- a/Kirsche/credits.html
+++ b/Kirsche/credits.html
@@ -78,6 +78,21 @@
             font-style: italic;
         }
 
+        .menu-button {
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            top: 10px;
+            left: 10px;
+        }
+        .menu-button img {
+            width: 100%;
+            height: 100%;
+        }
         .sidebar {
             position: fixed;
             top: 0;
@@ -90,40 +105,24 @@
             transform: translateX(-100%);
             transition: transform 0.3s ease;
         }
-
         .sidebar.active {
             transform: translateX(0);
         }
-
         .sidebar ul {
             list-style-type: none;
             padding: 2.25rem 0 0 0;
         }
-
         .sidebar ul li {
             margin: 1rem 0;
         }
-
         .sidebar ul li a {
             color: white;
             text-decoration: none;
         }
-
-        .menu-button {
-            cursor: pointer;
-            width: 50px;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .menu-button img {
-            width: 100%;
-            height: 100%;
+        .sidebar .menu-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
         }
     </style>
     <script>
