--- a/Kirsche/index_mods.html
+++ b/Kirsche/index_mods.html
@@ -6,6 +6,7 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
+        /* Your existing CSS */
         html, body {
             margin: 0;
             padding: 0;
@@ -31,20 +32,20 @@
             flex: 3;
             display: flex-start;
             flex-direction: column;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .chat-container {
             flex: 1;
             display: flex;
             flex-direction: column;
             height: 100%;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .stream-buttons {
             margin-top: 0;
-			display: flex;
+            display: flex;
             align-items: flex-start;
             justify-content: center;
             margin-bottom: 0;
@@ -52,12 +53,12 @@
         .menu-button {
             background: 1px solid lightgrey;
             color: white;
-			cursor: pointer;
+            cursor: pointer;
             width: 50px;
             height: 50px;
             margin-top: 0;
-			margin-right: 0.5rem;
-			margin-bottom: 0;
+            margin-right: 0.5rem;
+            margin-bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -155,7 +156,9 @@
             top: 10px;
             left: 10px;
         }
-		#iframeContainer {
+
+        /* CSS for the Toggle Button and Iframe Container */
+        #iframeContainer {
             display: none;
             position: fixed;
             top: 0;
@@ -171,8 +174,8 @@
             margin: 5%;
             border: none;
         }
-        #modButton {
-            position: absolute;
+        #toggleButton {
+            position: fixed;
             bottom: 20px;
             right: 20px;
             padding: 10px 20px;
@@ -184,50 +187,50 @@
         }
     </style>
     <script>
+        /* Your existing JavaScript */
         async function loadConfig() {
-			const response = await fetch('config.json');
-			const config = await response.json();
+            const response = await fetch('config.json');
+            const config = await response.json();
 
-			const apiKey = config.youtube_api_key; // Add your API key in config.json
-			const channelId = config.youtube_channel_id;
+            const apiKey = config.youtube_api_key; // Add your API key in config.json
+            const channelId = config.youtube_channel_id;
 
-			const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-			const videoResponse = await fetch(apiUrl);
-			const videoData = await videoResponse.json();
+            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+            const videoResponse = await fetch(apiUrl);
+            const videoData = await videoResponse.json();
 
-			if (videoData.items.length > 0) {
-				config.youtube_live_video_id = videoData.items[0].id.videoId;
-			}
+            if (videoData.items.length > 0) {
+                config.youtube_live_video_id = videoData.items[0].id.videoId;
+            }
 
-			return config;
-		}
-
+            return config;
+        }
 
         async function loadStream(service) {
-			const config = await loadConfig();
-			const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
-			const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
-			const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const config = await loadConfig();
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
 
-			const iframe = document.getElementById('live-stream');
+            const iframe = document.getElementById('live-stream');
 
-			if (service === 'youtube') {
-				iframe.src = youtubeEmbed;
-			} else if (service === 'twitch') {
-				iframe.src = twitchEmbed;
-			} else if (service === 'rumble') {
-				iframe.src = rumbleEmbed;
-			} else {
-				iframe.src = youtubeEmbed;
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
+                iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
 
-				iframe.onerror = function() {
-					iframe.src = twitchEmbed;
-					iframe.onerror = function() {
-						iframe.src = rumbleEmbed;
-            };
-        };
-    }
-}
+                iframe.onerror = function() {
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    };
+                };
+            }
+        }
 
         function switchTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(content => {
@@ -255,27 +258,33 @@
             document.getElementById('sidebar').classList.toggle('active');
         }
 
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-        }
+        /* JavaScript for the Toggle Button and Iframe Container */
+        const toggleButton = document.getElementById('toggleButton');
+        const iframeContainer = document.getElementById('iframeContainer');
+        const iframe = document.getElementById('iframe');
 
-		async function toggleStreamManager() {
-			const iframeContainer = document.getElementById('iframeContainer');
-			iframeContainer.style.display = iframeContainer.style.display === 'none' ? 'block' : 'none';
-		}
+        // Fetch twitch_id from config.json and set iframe src
+        fetch('config.json')
+            .then(response => response.json())
+            .then(config => {
+                const twitchId = config.twitch_id;
+                iframe.src = `https://dashboard.twitch.tv/u/${twitchId}/stream-manager`;
+            })
+            .catch(error => console.error('Error loading config:', error));
 
-		window.onload = async function() {
-			await loadStream();
-			await loadChat();
-			switchTab('twitch-chat');
-			await loadMenu();
+        toggleButton.addEventListener('click', () => {
+            if (iframeContainer.style.display === 'none' || iframeContainer.style.display === '') {
+                iframeContainer.style.display = 'block';
+            } else {
+                iframeContainer.style.display = 'none';
+            }
+        });
 
-			// Attach toggle function to modButton
-			const modButton = document.getElementById('modButton');
-			modButton.addEventListener('click', toggleStreamManager);
+        window.onload = async function() {
+            await loadStream();
+            await loadChat();
+            switchTab('twitch-chat');
+            await loadMenu();
         }
     </script>
 </head>
@@ -307,22 +316,35 @@
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
-            <!-- Mod button added here -->
-            <button id="modButton">Toggle Stream Manager</button>
         </div>
     </main>
-
     <div id="sidebar" class="sidebar">
         <button class="menu-button" onclick="toggleSidebar()">
             <img src="menu.png" alt="Menu">
         </button>
         <ul id="menu-list"></ul>
     </div>
-
-    <!-- Placeholder for iframe container -->
+    
+    <!-- HTML for the Toggle Button and Iframe Container -->
+    <button id="toggleButton">Toggle Stream Manager</button>
     <div id="iframeContainer">
-        <button onclick="toggleStreamManager()">Close</button>
-        <iframe id="iframe" src="moderation.html"></iframe>
+        <iframe id="iframe"></iframe>
     </div>
+
+    <script>
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+        }
+
+        window.onload = async function() {
+            await loadStream();
+            await loadChat();
+            switchTab('twitch-chat');
+            await loadMenu();
+        }
+    </script>
 </body>
 </html>
