--- a/Kirsche/index_mods.html
+++ b/Kirsche/index_mods.html
@@ -258,80 +258,6 @@
             document.getElementById('sidebar').classList.toggle('active');
         }
 
-        /* JavaScript for the Toggle Button and Iframe Container */
-        const toggleButton = document.getElementById('toggleButton');
-        const iframeContainer = document.getElementById('iframeContainer');
-        const iframe = document.getElementById('iframe');
-
-        // Fetch twitch_id from config.json and set iframe src
-        fetch('config.json')
-            .then(response => response.json())
-            .then(config => {
-                const twitchId = config.twitch_id;
-                iframe.src = `https://dashboard.twitch.tv/u/${twitchId}/stream-manager`;
-            })
-            .catch(error => console.error('Error loading config:', error));
-
-        toggleButton.addEventListener('click', () => {
-            if (iframeContainer.style.display === 'none' || iframeContainer.style.display === '') {
-                iframeContainer.style.display = 'block';
-            } else {
-                iframeContainer.style.display = 'none';
-            }
-        });
-
-        window.onload = async function() {
-            await loadStream();
-            await loadChat();
-            switchTab('twitch-chat');
-            await loadMenu();
-        }
-    </script>
-</head>
-<body>
-    <main class="main-container">
-        <div class="stream-container">
-            <div class="stream-buttons">
-                <button class="menu-button" onclick="toggleSidebar()">
-                    <img src="menu.png" alt="Menu">
-                </button>
-                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
-                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
-                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
-            </div>
-            <iframe id="live-stream" src=""></iframe>
-        </div>
-        <div class="chat-container">
-            <div class="tabs">
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
-                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-            </div>
-            <div id="twitch-chat" class="tab-content active">
-                <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
-            </div>
-            <div id="youtube-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
-            </div>
-            <div id="rumble-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
-            </div>
-        </div>
-    </main>
-    <div id="sidebar" class="sidebar">
-        <button class="menu-button" onclick="toggleSidebar()">
-            <img src="menu.png" alt="Menu">
-        </button>
-        <ul id="menu-list"></ul>
-    </div>
-    
-    <!-- HTML for the Toggle Button and Iframe Container -->
-    <button id="toggleButton">Toggle Stream Manager</button>
-    <div id="iframeContainer">
-        <iframe id="iframe"></iframe>
-    </div>
-
-    <script>
         async function loadChat() {
             const config = await loadConfig();
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
@@ -345,6 +271,82 @@
             switchTab('twitch-chat');
             await loadMenu();
         }
+
+        /* JavaScript for the Toggle Button and Iframe Container */
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleButton = document.getElementById('toggleButton');
+            const iframeContainer = document.getElementById('iframeContainer');
+            const iframe = document.getElementById('iframe');
+
+            // Fetch twitch_id from config.json and set iframe src
+            fetch('config.json')
+                .then(response => response.json())
+                .then(config => {
+                    const twitchId = config.twitch_id;
+                    iframe.src = `https://dashboard.twitch.tv/u/${twitchId}/stream-manager`;
+                })
+                .catch(error => console.error('Error loading config:', error));
+
+            toggleButton.addEventListener('click', () => {
+                if (iframeContainer.style.display === 'none' || iframeContainer.style.display === '') {
+                    iframeContainer.style.display = 'block';
+                } else {
+                    iframeContainer.style.display = 'none';
+                }
+            });
+        });
     </script>
+</head>
+<body>
+    <nav>
+        <ul>
+            <!-- Your existing menu items -->
+        </ul>
+    </nav>
+    <main>
+        <div class="main-container">
+            <div class="stream-container">
+                <div class="stream-buttons">
+                    <button class="menu-button" onclick="toggleSidebar()">
+                        <img src="menu.png" alt="Menu">
+                    </button>
+                    <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
+                    <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
+                    <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+                </div>
+                <iframe id="live-stream" src=""></iframe>
+            </div>
+            <div class="chat-container">
+                <div class="tabs">
+                    <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
+                    <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
+                    <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                </div>
+                <div id="twitch-chat" class="tab-content active">
+                    <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
+                </div>
+                <div id="youtube-chat" class="tab-content">
+                    <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
+                </div>
+                <div id="rumble-chat" class="tab-content">
+                    <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div id="sidebar" class="sidebar">
+        <button class="menu-button" onclick="toggleSidebar()">
+            <img src="menu.png" alt="Menu">
+        </button>
+        <ul id="menu-list"></ul>
+    </div>
+    
+    <!-- HTML for the Toggle Button and Iframe Container -->
+    <div class="iframe-toggle-container">
+        <button id="toggleButton">Toggle Stream Manager</button>
+        <div id="iframeContainer">
+            <iframe id="iframe"></iframe>
+        </div>
+    </div>
 </body>
 </html>
