--- a/mods.html
+++ b/mods.html
@@ -161,10 +161,10 @@
         #iframeContainer {
             display: none;
             position: fixed;
-            top: 0;
+            top: 50px; /* Adjust as needed */
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 90%;
             background: rgba(0, 0, 0, 0.8);
             z-index: 1000;
         }
@@ -175,14 +175,15 @@
             border: none;
         }
         #toggleButton {
+            position: fixed;
+            top: 0;
+            right: 0;
             padding: 10px 20px;
             background: #9147ff;
             color: white;
             border: none;
             cursor: pointer;
             z-index: 1001;
-            align-self: center;
-            margin: 10px auto;
         }
     </style>
     <script>
@@ -293,6 +294,12 @@
                     iframeContainer.style.display = 'none';
                 }
             });
+
+            document.addEventListener('click', (event) => {
+                if (!iframeContainer.contains(event.target) && !toggleButton.contains(event.target)) {
+                    iframeContainer.style.display = 'none';
+                }
+            });
         });
     </script>
 </head>
@@ -302,6 +309,10 @@
             <!-- Your existing menu items -->
         </ul>
     </nav>
+    <button id="toggleButton">Toggle Stream Manager</button>
+    <div id="iframeContainer">
+        <iframe id="iframe"></iframe>
+    </div>
     <main>
         <div class="main-container">
             <div class="stream-container">
@@ -330,10 +341,6 @@
                 <div id="rumble-chat" class="tab-content">
                     <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
                 </div>
-                <!-- Moved the Toggle Button and Iframe Container inside chat-container -->
-                <div class="iframe-toggle-container">
-                    <button id="toggleButton">Toggle Stream Manager</button>
-                </div>
             </div>
         </div>
     </main>
@@ -342,10 +349,6 @@
             <img src="menu.png" alt="Menu">
         </button>
         <ul id="menu-list"></ul>
-    </div>
-    <!-- Moved the Iframe Container below the chat-container -->
-    <div id="iframeContainer">
-        <iframe id="iframe"></iframe>
     </div>
 </body>
 </html>
